--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@ Connection to 40.76.17.102 closed.
 <h3>Get Bold</h3>
 azureuser@vm123:~$ <span class="highlighted">sudo apt-get install -y nodejs npm</span>
 azureuser@vm123:~$ <span class="highlighted">git clone https://github.com/phoenix-server-farm/azure-cli-ubuntu.git</span>
+azureuser@vm123:~$ <span class="highlighted">npm install connect serve-static</span>
 <span class="redhighlighted">output omitted</span>
 </div>
 
