--- a/index.html
+++ b/index.html
@@ -245,8 +245,13 @@ azureuser@vm123:~$ <span class="highlighted">sudo apt-get install -y nodejs npm<
 azureuser@vm123:~$ <span class="highlighted">git clone https://github.com/phoenix-server-farm/azure-cli-ubuntu.git</span>
 azureuser@vm123:~$ <span class="highlighted">cd azure-cli-ubuntu</span>
 azureuser@vm123:~$ <span class="highlighted">npm install connect serve-static</span>
-azureuser@vm123:~$ <span class="highlighted">nodejs server.js</span>
+azureuser@vm123:~$ <span class="highlighted">nodejs server.js &amp;</span>
+azureuser@vm123:~$ <span class="highlighted">exit</span>
 <span class="redhighlighted">output omitted</span>
+</div>
+
+<div class="well well-lg">
+Navigate with your browser to http://IP_ADDR:8080
 </div>
 
 <div class="well well-lg">
