--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@ Connection to 40.76.17.102 closed.
 
 <div class="well well-lg">
 <h3>Get Bold</h3>
+<pre>
 azureuser@vm123:~$ <span class="highlighted">sudo apt-get install -y nodejs npm</span>
 azureuser@vm123:~$ <span class="highlighted">git clone https://github.com/phoenix-server-farm/azure-cli-ubuntu.git</span>
 azureuser@vm123:~$ <span class="highlighted">cd azure-cli-ubuntu</span>
@@ -248,6 +249,7 @@ azureuser@vm123:~$ <span class="highlighted">npm install connect serve-static</s
 azureuser@vm123:~$ <span class="highlighted">nodejs server.js &amp;</span>
 azureuser@vm123:~$ <span class="highlighted">exit</span>
 <span class="redhighlighted">output omitted</span>
+</pre>
 </div>
 
 <div class="well well-lg">
